# plancia

./: .editorconfig  .env.dev.example  .env.example  .env.staging.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  manage.py  mise.toml  mkdocs.yml  pyproject.toml
.github/workflows/: release-manual.yml
.run/: celery-worker.run.xml  manage.py-migrate.run.xml  runserver.run.xml
apps/accounts/: adapters.py  admin.py  apps.py  forms.py  middleware.py  mixins.py  models.py  roles.py  signals.py  urls.py  views.py
apps/api/: api.py  auth.py  permissions.py
apps/diaries/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serialization.py  service.py  urls.py  views.py  visibility.py
apps/editions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/evaluations/: actions.py  admin.py  models.py  urls.py  views.py
apps/exports/: admin.py  models.py  service.py  tasks.py  views.py
apps/helpdesk/: admin.py  apps.py  models.py  urls.py  views.py
apps/imports/: models.py  tasks.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  models.py  service.py  tasks.py  urls.py  (+2 more)
config/: celery.py  error_views.py  urls.py
deploy/: anonymize_staging.sh  apache.vhost.tpl  backup.sh  configure-prod.sh  configure-staging.sh  crontab.example  entrypoint.sh  nginx.vhost.tpl  plancia.service.tpl
docs/: Plancia_Progettazione.md  index.md
fixtures/: README.md  sample_coca.csv  sample_evento.csv  sample_ragazzi.csv
templates/: 403.html  403_csrf.html  404.html  500.html  base.html  base_gestione.html  home_no_edizione.html  manifest.json  offline.html  pwa.html
(+222 files in other folders)
